--- a/src/components/Calculator/GameModeCalculator/GMItemSelector/WorkBenchTypeSelector/WorkBenchTypeSelector.module.scss
+++ b/src/components/Calculator/GameModeCalculator/GMItemSelector/WorkBenchTypeSelector/WorkBenchTypeSelector.module.scss
@@ -26,10 +26,10 @@
   }
 }
 
-[data-selected='items'] {
+[data-selected='ITEMS'] {
   --width-button-box: 210px;
 }
 
-[data-selected='resource'] {
+[data-selected='RESOURCES'] {
   --width-button-box: 260px;
 }
