--- a/src/components/Calculator/DefaultCalculator/CalculatorForm/Inputs/PercentInput/PercentInput.module.scss
+++ b/src/components/Calculator/DefaultCalculator/CalculatorForm/Inputs/PercentInput/PercentInput.module.scss
@@ -5,8 +5,8 @@
     margin-left: 10px;
     justify-content: space-between;
     align-items: center;
+    width: 225px;
   }
-
 }
 
 .selectPercentStyle {
