--- a/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ItemSelector/ItemTypeSelector/ItemTypeSelector.module.scss
+++ b/src/components/Calculator/DefaultCalculator/CalculatorForm/Selectors/ItemSelector/ItemTypeSelector/ItemTypeSelector.module.scss
@@ -1,6 +1,8 @@
 .itemTypeButtonSelector {
   position: absolute;
-  margin-left: 80px;
+  display: flex;
+  align-items: center;
+  margin-left: 65px;
   transition: all 0.5s ease-in-out;
   z-index: 1;
 }
