--- a/src/components/Calculator/DefaultCalculator/InfoTable/TableTdElement/TableTdElement.module.scss
+++ b/src/components/Calculator/DefaultCalculator/InfoTable/TableTdElement/TableTdElement.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     color: var(--color-div);
-    transition: all 1s ease;
+    transition: color 1s ease, background-color 1s ease;
     font-weight: 500;
   }
   div:first-child {
