--- a/src/components/Calculator/GameModeCalculator/MarketItem/MarketItemForm/QuantityInput/QuantityInput.module.scss
+++ b/src/components/Calculator/GameModeCalculator/MarketItem/MarketItemForm/QuantityInput/QuantityInput.module.scss
@@ -1,7 +1,7 @@
 .inputRangeWrapper{
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  margin-top: 50px;
 
   .amountLabel {
     display: flex;
@@ -11,7 +11,7 @@
 
   div{
     position: absolute;
-    top: 88px;
+    top: 55px;
     left: 124px;
     width: 254px;
     z-index: 9999;
