--- a/src/components/Calculator/GameModeCalculator/MarketItem/MaxItemQuantity/MaxItemQuantity.module.scss
+++ b/src/components/Calculator/GameModeCalculator/MarketItem/MaxItemQuantity/MaxItemQuantity.module.scss
@@ -1,9 +1,16 @@
 .maxItemQuantity{
   position: absolute;
-  top: 71px;
-  left: 74px;
+  width: 20px;
+  height: 20px;
+  top: 68px;
+  left: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   z-index: 9999;
-  color: white !important;
-  font-weight: 100 !important;
-  font-size: 9px;
+  p {
+    color: white !important;
+    font-weight: 100 !important;
+    font-size: 9px;
+  }
 }
