--- a/src/components/Calculator/GameModeCalculator/GMItemSelector/WorkBenchItemSelector/WorkBenchItem/WorkBenchItem.module.scss
+++ b/src/components/Calculator/GameModeCalculator/GMItemSelector/WorkBenchItemSelector/WorkBenchItem/WorkBenchItem.module.scss
@@ -28,7 +28,10 @@
     align-items: center;
     font-weight: 700;
     color: rgb(96, 67, 47);
+    font-size: 16px;
+    padding-right: 20px;
   }
+
 
   .resourcesBox {
     grid-area: C;
@@ -68,6 +71,7 @@
     color: white;
   }
 }
+
 
 .itemBox:active{
   .itemImage{
