sse added; some code fixes

--- a/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
+++ b/src/components/Calculator/DefaultCalculator/InfoTable/InfoTable.module.scss
@@ -53,14 +53,17 @@
 }
 
 .infoTableTooltip {
+  div {
+    padding-top: 15px;
+  }
   hr{
     border: none;
     height: 1px;
     background-color: var(--color-table-text);
     margin-top: 5px;
   }
-  hr:not(hr:last-child) {
-    margin-bottom: -10px;
-  }
+  //hr:not(hr:last-child) {
+  //  margin-bottom: -10px;
+  //}
 }
 
